# SDMRR

./: Data Processing.ipynb  Examples.ipynb  Interface.ipynb  Pumptest.ipynb  README.md  Reactor.ipynb  SDMRR.py  SysTest.ipynb  copy_data.sh  pump.py  pumptest.py  pyproject.toml  sample.py  setup_sample.py
Pump_Controller/: Pump_Controller.ino  flash_arduino.sh
sdmrr/: SDMRR.py  __init__.py
sdmrr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
